# adv-des-attack-dddc

./: DGSM_Delta_GradProj.m  LICENSE  OptDelta_GradProj.m  OptDelta_GradProj_anal.m  OptDelta_smoothing.m  README.md  RandDelta_Uniform.m  data_gen.m  interface.py  main.m  pyproject.toml
LQRtools/: KKTeq_LQR.m  KKTeq_LQR2.m  K_func_LQR.m  ctrl_design_LQR.m  gradD_func_LQR.m  gradD_func_LQR_adjoint.m  gradD_func_LQR_adjoint_smoothing.m  gradD_func_LQR_anal.m  grad_func_LQR_KKTnum.m
RobustControlTools/: ctrl_design_Robust.m
scenarios/: defense_reg.m  defense_rob.m  demonstration.m  deseps.m  grad_comp.m  transf.m
systems/: build_sys.m
tools/: AutoDiff.m  Create_ComMat.m  plot_save.m  proj_D.m  sep_ZXU.m  spec_rad_clsys.m  unit_dist_samples_in_d_ball.m
